--- a/index.html
+++ b/index.html
@@ -46,48 +46,48 @@
                 </div>
             </nav>
          <!-- Header with Background Image -->
-            <header class="bg-dark py-5" style="background: url('assets/images/cv.jpg') no-repeat center center; background-size: cover;">
-                     <div class="container px-5">
-                          <div class="row gx-5 align-items-center justify-content-center text-white" style="backdrop-filter: brightness(100%); padding: 100px 0;">
-                                 <div class="col-lg-8 col-xl-7 col-xxl-6">
-                                    <div class="my-5 text-center text-xl-start">
-                                        <h1 class="display-5 fw-bolder mb-2">Christian Angelo Verdad</h1>
-                                        <p class="lead fw-normal text-white-50 mb-4">Studying BS Information Systems in Caraga State University</p>
-                                            <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
-                                                <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#features">KNOW ME BETTER!</a>
-                                                <a class="btn btn-outline-light btn-lg px-4">Let's go</a>
-                                            </div>
-                                    </div>
-                                </div>
+         <header class="bg-dark py-5" style="background: url('assets/images/cv.jpg') no-repeat center center; background-size: cover;">
+            <div class="container px-5">
+                <div class="row gx-5 align-items-center justify-content-end text-white" style="backdrop-filter: brightness(100%); padding: 100px 0;">
+                    <div class="col-lg-8 col-xl-7 col-xxl-6 ms-auto"> 
+                        <div class="my-5 text-end"> 
+                            <h1 class="display-5 fw-bolder mb-2">Christian Angelo Verdad</h1>
+                            <p class="lead fw-normal text-white-50 mb-4">Studying BS Information Systems in Caraga State University</p>
+                            <div class="d-flex justify-content-end">
+                                <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#aboutMe">KNOW ME BETTER!</a>
+                            </div>
                         </div>
-                 </div>
-            </header>
-            <!-- Features section-->
-            <section class="py-5" id="features">
+                    </div>
+                </div>
+            </div>
+        </header>
+            <!-- about me section-->
+            <section class="bg-dark py-5" id="aboutMe" style="background: url('assets/images/download\ \(6\).jpg') no-repeat center center; background-size: cover;">
                 <div class="container px-5 my-5">
                     <div class="row gx-5">
-                        <div class="col-lg-4 mb-5 mb-lg-0"><h2 class="fw-bolder mb-0">A better way to start building.</h2></div>
+                        <div class="col-lg-4 mb-5 mb-lg-0"><h2 class="fw-bolder mb-0">My Information</h2></div>
                         <div class="col-lg-8">
                             <div class="row gx-5 row-cols-1 row-cols-md-2">
                                 <div class="col mb-5 h-100">
-                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-collection"></i></div>
-                                    <h2 class="h5">Featured title</h2>
-                                    <p class="mb-0">Paragraph of text beneath the heading to explain the heading. Here is just a bit more text.</p>
+                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-book"></i></div>
+                                    <h2 class="h5">Education</h2>
+                                    <p class="mb-0">Bachelor of Science in Information Systems <br> Caraga State University-Main</p>
                                 </div>
                                 <div class="col mb-5 h-100">
-                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-building"></i></div>
-                                    <h2 class="h5">Featured title</h2>
-                                    <p class="mb-0">Paragraph of text beneath the heading to explain the heading. Here is just a bit more text.</p>
+                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-phone"></i></div>
+                                    <h2 class="h5">Contact me via</h2>
+                                    <p class="mb-0">09165283123 <br> 2002chanv@gmail.com</p>
                                 </div>
                                 <div class="col mb-5 mb-md-0 h-100">
-                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-toggles2"></i></div>
-                                    <h2 class="h5">Featured title</h2>
-                                    <p class="mb-0">Paragraph of text beneath the heading to explain the heading. Here is just a bit more text.</p>
+                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-house-door"></i></div>
+                                    <h2 class="h5">Address</h2>
+                                    <p class="mb-0">Brgy. Baan Riverside, Butuan City, AdN</p>
                                 </div>
                                 <div class="col h-100">
-                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-toggles2"></i></div>
-                                    <h2 class="h5">Featured title</h2>
-                                    <p class="mb-0">Paragraph of text beneath the heading to explain the heading. Here is just a bit more text.</p>
+                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-facebook"></i></div>
+                                    <h2 class="h5">Social Media Account</h2>
+                                    <a href="https://www.facebook.com/yuta.thestrongest" target="_blank">Facebook</a>
+                                    <p class="mb-0">Christian Verdad</p>
                                 </div>
                             </div>
                         </div>
