--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
             <div class="container px-5">
                 <div class="row gx-5 align-items-center justify-content-end text-white" style="backdrop-filter: brightness(100%); padding: 100px 0;">
                     <div class="col-lg-8 col-xl-7 col-xxl-6 ms-auto"> 
-                        <div class="my-5 text-end"> 
+                        <div class="my-5 text-center"> 
                             <h1 class="display-5 fw-bolder mb-2">Christian Angelo Verdad</h1>
                             <p class="lead fw-normal text-white-50 mb-4">Studying BS Information Systems in Caraga State University</p>
-                            <div class="d-flex justify-content-end">
+                            <div class="d-flex justify-content-center">
                                 <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#aboutMe">KNOW ME BETTER!</a>
                             </div>
                         </div>
