updated fonts and background draft

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Modern Business - Start Bootstrap Template</title>
+        <!-- Fonts-->
+        <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+
+
+
+
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
@@ -50,9 +59,9 @@
             <div class="container px-5">
                 <div class="row gx-5 align-items-center justify-content-end text-white" style="backdrop-filter: brightness(100%); padding: 100px 0;">
                     <div class="col-lg-8 col-xl-7 col-xxl-6 ms-auto"> 
-                        <div class="my-5 text-center"> 
-                            <h1 class="display-5 fw-bolder mb-2">Christian Angelo Verdad</h1>
-                            <p class="lead fw-normal text-white-50 mb-4">Studying BS Information Systems in Caraga State University</p>
+                        <div class="my-5 text-center">  
+                            <h1 class="display-5 fw-bolder mb-2" style="font-family: 'Poppins', sans-serif;">Christian Angelo Verdad</h1>
+                            <p style="font-family: 'Poppins', sans-serif;">Studying BS Information Systems in Caraga State University</p>
                             <div class="d-flex justify-content-center">
                                 <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#aboutMe">KNOW ME BETTER!</a>
                             </div>
@@ -65,13 +74,15 @@
             <section class="bg-dark py-5" id="aboutMe" style="background: url('assets/images/download\ \(6\).jpg') no-repeat center center; background-size: cover;">
                 <div class="container px-5 my-5">
                     <div class="row gx-5">
-                        <div class="col-lg-4 mb-5 mb-lg-0"><h2 class="fw-bolder mb-0">My Information</h2></div>
+                        <div class="col-lg-4 mb-5 mb-lg-0">
+                            <h2 class="fw-bolder mb-0" style="font-family: 'Great Vibes', cursive; font-size: 36px;">My Information</h2>
+                        </div>
                         <div class="col-lg-8">
                             <div class="row gx-5 row-cols-1 row-cols-md-2">
                                 <div class="col mb-5 h-100">
                                     <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-book"></i></div>
                                     <h2 class="h5">Education</h2>
-                                    <p class="mb-0">Bachelor of Science in Information Systems <br> Caraga State University-Main</p>
+                                    <p class="mb-0 font-family: 'Great Vibes', cursive;" >Bachelor of Science in Information Systems <br> Caraga State University-Main</p>
                                 </div>
                                 <div class="col mb-5 h-100">
                                     <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-phone"></i></div>
@@ -100,28 +111,25 @@
                     <div class="row gx-5 justify-content-center">
                         <div class="col-lg-10 col-xl-7">
                             <div class="text-center">
-                                <div class="fs-4 mb-4 fst-italic">"Working with Start Bootstrap templates has saved me tons of development time when building new projects! Starting with a Bootstrap template just makes things easier!"</div>
-                                <div class="d-flex align-items-center justify-content-center">
-                                    <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d" alt="..." />
-                                    <div class="fw-bold">
-                                        Tom Ato
-                                        <span class="fw-bold text-primary mx-1">/</span>
-                                        CEO, Pomodoro
-                                    </div>
+                                <div class="fs-4 mb-4" style="font-family: 'Great Vibes', cursive; font-size: 28px !important;">
+                                    "To gain hands-on experience in information systems by helping with tasks like managing
+                                    data, analyzing processes, and creating IT solutions. I aim to apply what I’ve learned in
+                                    school while improving my skills and contributing to the organization’s success."
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+
             <!-- Blog preview section-->
             <section class="py-5">
                 <div class="container px-5 my-5">
                     <div class="row gx-5 justify-content-center">
                         <div class="col-lg-8 col-xl-6">
                             <div class="text-center">
-                                <h2 class="fw-bolder">From our blog</h2>
-                                <p class="lead fw-normal text-muted mb-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque fugit ratione dicta mollitia. Officiis ad.</p>
+                                <h2 class="fw-bolder">Background</h2>
+                                <p class="lead fw-normal text-muted mb-5">A guide to my previous work experience, seminars, and projects</p>
                             </div>
                         </div>
                     </div>
@@ -130,8 +138,8 @@
                             <div class="card h-100 shadow border-0">
                                 <img class="card-img-top" src="https://dummyimage.com/600x350/ced4da/6c757d" alt="..." />
                                 <div class="card-body p-4">
-                                    <div class="badge bg-primary bg-gradient rounded-pill mb-2">News</div>
-                                    <a class="text-decoration-none link-dark stretched-link" href="#!"><h5 class="card-title mb-3">Blog post title</h5></a>
+                                    <div class="badge bg-primary bg-gradient rounded-pill mb-2">Work</div>
+                                    <a class="text-decoration-none link-dark stretched-link" href="#!"><h5 class="card-title mb-3">McDonald's</h5></a>
                                     <p class="card-text mb-0">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                 </div>
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
@@ -151,8 +159,8 @@
                             <div class="card h-100 shadow border-0">
                                 <img class="card-img-top" src="https://dummyimage.com/600x350/adb5bd/495057" alt="..." />
                                 <div class="card-body p-4">
-                                    <div class="badge bg-primary bg-gradient rounded-pill mb-2">Media</div>
-                                    <a class="text-decoration-none link-dark stretched-link" href="#!"><h5 class="card-title mb-3">Another blog post title</h5></a>
+                                    <div class="badge bg-primary bg-gradient rounded-pill mb-2">Seminars</div>
+                                    <a class="text-decoration-none link-dark stretched-link" href="#!"><h5 class="card-title mb-3">Trainings and seminars</h5></a>
                                     <p class="card-text mb-0">This text is a bit longer to illustrate the adaptive height of each card. Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                                 </div>
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
@@ -172,8 +180,8 @@
                             <div class="card h-100 shadow border-0">
                                 <img class="card-img-top" src="https://dummyimage.com/600x350/6c757d/343a40" alt="..." />
                                 <div class="card-body p-4">
-                                    <div class="badge bg-primary bg-gradient rounded-pill mb-2">News</div>
-                                    <a class="text-decoration-none link-dark stretched-link" href="#!"><h5 class="card-title mb-3">The last blog post title is a little bit longer than the others</h5></a>
+                                    <div class="badge bg-primary bg-gradient rounded-pill mb-2">Recent Project</div>
+                                    <a class="text-decoration-none link-dark stretched-link" href="#!"><h5 class="card-title mb-3">KAPNAYAN-CSU Website</h5></a>
                                     <p class="card-text mb-0">Some more quick example text to build on the card title and make up the bulk of the card's content.</p>
                                 </div>
                                 <div class="card-footer p-4 pt-0 bg-transparent border-top-0">
